<resources>
    <string name="app_name">Family Map</string>
    <string name="login_dummy">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="username">User Name</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="empty_email_error_message">Email cannot be blank</string>
    <string name="invalid_email_error_message">Please Enter a valid email address</string>
    <string name="empty_password_error_message">Password cannot be empty</string>
    <string name="name_error_message">Name cannot be empty</string>
    <string name="login_failure">Login failed</string>
    <string name="about">About</string>
    <string name="rate_us">Rate Us</string>
    <string name="feed">Feed</string>
    <string name="logout">Logout</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
    <string name="image_description"></string>
    <string name="current_location">Current position</string>

    <string name="map">Map</string>
    <string name="family">Family</string>
    <string name="profile">Profile</string>

    <string name="icon_map_marker">ic_map_marker</string>

    <string name="toast_db_actual">Database is actual</string>
    <string name="toast_db_error">Error initialising database</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_navigation">NavigationActivity</string>

    <string name="project_info">This Family app implements MVP architecture using Dagger2, GreenDao, RxJava, FastAndroidNetworking and PlaceholderView</string>
    <string name="link_mvp_blog">1. https://blog.mindorks.com</string>
    <string name="link_mvp_repo">2. https://github.com/MindorksOpenSource/android-mvp-architecture</string>
    <string name="link_mindorks_blog">3. https://blog.mindorks.com</string>
    <string name="link_mindorks_repo">4. https://github.com/MindorksOpenSource</string>
    <string name="version">"version"</string>
    <string name="title">Feed</string>
    <string name="blogs">Blogs</string>
    <string name="open_source">Open Source</string>
    <string name="rating_message">Please let us know, how can we improve ourselves?</string>
    <string name="rating_play_store_redirect_message_line_1">Awesome! Thank you for the 5 stars</string>
    <string name="rating_play_store_redirect_message_line_2">Please help others, in knowing some good things about this app.</string>
    <string name="later">Later</string>
    <string name="submit">Submit</string>
    <string name="rating_play_store_text">Rate us on Play Store</string>
    <string name="rating_submitted_successfully">Rating submitted successfully</string>
</resources>
