<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/main_group"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/baseline_person_black_24"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_family"
            android:icon="@drawable/baseline_group_black_24"
            android:title="@string/family" />
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/baseline_person_pin_24"
            android:title="@string/map" />
    </group>

    <group android:id="@+id/second_group"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_update"
            android:icon="@drawable/baseline_get_app_black_24dp"
            android:title="@string/update" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info_24px"
            android:title="@string/about" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_keyboard_backspace_24px"
            android:title="@string/logout" />
    </group>


</menu>