<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:ignore="RtlSymmetry">

    <RelativeLayout
        android:id="@+id/user_info_common"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/user_image"
            android:layout_width="fill_parent"
            android:layout_height="200dp"
            android:layout_gravity="top"
            android:contentDescription="@string/image_description"
            android:scaleType="center"
            android:src="@drawable/profile_default_small" />

        <TextView
            android:id="@+id/user_text_name"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/user_image"
            android:adjustViewBounds="true"
            android:paddingEnd="15dp"
            android:paddingStart="15dp"
            android:paddingTop="10dp"
            android:scaleType="centerCrop"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp" />

        <ru.toir.mobile.utils.IconTextView
            android:id="@+id/user_location_icon"
            android:layout_width="36dp"
            android:layout_height="50dp"
            android:layout_below="@+id/user_text_name"
            android:layout_marginStart="15dp"
            android:text="@string/icon_map_marker"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/user_text_location"
            android:layout_width="fill_parent"
            android:layout_height="25dp"
            android:layout_below="@+id/user_text_name"
            android:layout_toEndOf="@+id/user_location_icon"
            android:background="@color/white"
            android:paddingStart="10dp"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/user_text_location_label"
            android:layout_width="fill_parent"
            android:layout_height="25dp"
            android:layout_below="@+id/user_text_location"
            android:layout_toEndOf="@+id/user_location_icon"
            android:paddingStart="10dp"
            android:text="@string/current_location"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp" />

    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>